fix preview overflow

--- a/src/app/competition-list/competition-preview/competition-preview.component.css
+++ b/src/app/competition-list/competition-preview/competition-preview.component.css
@@ -3,7 +3,9 @@
   padding: 15px;
 }
 .competition-info {
+  align-self: flex-start;
   text-align: left;
+  overflow: hidden;
   padding: 0;
 }
 .competition-name {
